// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalloutBody /> with additional className matches its snapshot 1`] = `
<div
  className="y-callout--body TEST_CLASSNAME"
>
  <Block
    padding="xLarge"
  >
    body content
  </Block>
</div>
`;

exports[`<CalloutBody /> with default options matches its snapshot 1`] = `
<div
  className="y-callout--body"
>
  <Block
    padding="xLarge"
  >
    body content
  </Block>
</div>
`;
